--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,10 @@
+#top.navbar {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  z-index: 99;
+}
+
 label {
   display: block;
   margin-top: 10px;
